--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ repositories {
 }
 dependencies {
     compile 'com.github.QuadFlask:colorpicker:0.0.9+'
+    compile 'com.r0adkll:slidableactivity:2.0.3'
 
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.parse.bolts:bolts-android:1.+'
